fixed all relationships