@@ -3,6 +3,7 @@ package ccfit.nsu.ru.daryaevd.military_unit.mapper;
 import ccfit.nsu.ru.daryaevd.military_unit.dto.SoldierDto;
 import ccfit.nsu.ru.daryaevd.military_unit.entity.Mas;
 import ccfit.nsu.ru.daryaevd.military_unit.entity.Soldier;
+import ccfit.nsu.ru.daryaevd.military_unit.entity.SoldierType;
 import ccfit.nsu.ru.daryaevd.military_unit.entity.Subdivision;
 
 import java.util.List;
@@ -18,12 +19,10 @@ public class SoldierMapper {
         soldierDto.setMilitaryCard(soldier.getMilitaryCard());
         soldierDto.setDateOfIssueMilitaryCard(soldier.getDateOfIssueMilitaryCard());
 
-//        // Set the masId if needed
-//        if (soldier.getMas() != null) {
-            soldierDto.setMasId(soldier.getMas().getId());
-//        }
+        soldierDto.setMasId(soldier.getMas().getId());
 
-        // Set the list of subdivision IDs
+        soldierDto.setTypeOfSoldier(soldier.getSoldierType().getId());
+
         List<Long> subdivisionIds = soldier.getSubdivisions().stream()
                 .map(Subdivision::getId)
                 .collect(Collectors.toList());
@@ -31,7 +30,6 @@ public class SoldierMapper {
 
         return soldierDto;
     }
-
 
     public static Soldier mapToSoldier(SoldierDto soldierDto) {
         Soldier soldier = new Soldier();
@@ -42,19 +40,21 @@ public class SoldierMapper {
         soldier.setMilitaryCard(soldierDto.getMilitaryCard());
         soldier.setDateOfIssueMilitaryCard(soldierDto.getDateOfIssueMilitaryCard());
 
-        // to connect with mas
         Mas mas = new Mas();
         mas.setId(soldierDto.getMasId());
         soldier.setMas(mas);
 
-        // Set the list of subdivisions
+        SoldierType soldierType = new SoldierType();
+        soldierType.setId(soldierDto.getTypeOfSoldier());
+        soldier.setSoldierType(soldierType);
+
         List<Subdivision> subdivisions = soldierDto.getSubdivisionIds().stream()
                 .map(id -> {
                     Subdivision subdivision = new Subdivision();
                     subdivision.setId(id);
                     return subdivision;
                 })
-                .collect(Collectors.toList());
+                .toList();
         soldier.setSubdivisions(subdivisions);
 
         return soldier;
